chore: update styles for cleanup/summary

--- a/layouts/partials/custom-header.html
+++ b/layouts/partials/custom-header.html
@@ -16,4 +16,19 @@
     margin-right: 3px;
     font-weight: bold;
   }
+
+  #body-inner ul {
+    padding-left: 25px;
+  }
+
+  #body-inner ul li {
+    font-size: 18px;
+    line-height: 25px;
+    margin-bottom: 10px;
+  }
+
+  #body-inner ul li ul {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
 </style>
